--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,14 @@
         {
             "src":  "/",
             "dest": "api/user.js"
+        },
+        {
+            "src": "/users",
+            "methods": [
+                "POST",
+                "GET"
+            ],
+            "dest": "api/user.js"
         }
     ]
 }
